--- a/web_scraping/reddit_api.ipynb
+++ b/web_scraping/reddit_api.ipynb
@@ -12539,7 +12539,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(path_or_buf=r\"C:\\VSCode\\NLP4B_Football\\web_scraping\\r_football.csv\", mode='a', header=False)"
+   ]
   }
  ],
  "metadata": {
