--- a/web_scraping/youtube/dataScrapeFromYoutube.ipynb
+++ b/web_scraping/youtube/dataScrapeFromYoutube.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import googleapiclient.discovery #\"conda install -c conda-forge google-api-python-client\" command to install package from anaconda\n",
-    "import googleapiclient.errors"
+    "import googleapiclient.discovery #\"conda install -c conda-forge google-api-python-client\"\n",
+    "import googleapiclient.errors\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "whos fault\n",
+      "&lt;Hit 100k today. Thanks for the knowledge and nuggets you had thrown my way over last months, started with $8k in February\n",
+      "The people that organized this would also think it&#39;s a good idea allow palestinian fans be next to israel fans, or russian alongside ukranians. <br><br>What in the world were they thinking.\n",
+      "These are two national teams that should have more security measures. In the pasts, they have instances of violence resulting in injuries or even death. Most of these who paid the price we’re Argentinian fans and players. FIFA should know better when having fixtures involving rival national teams. If they play another match together, you might as well get the SWAT or even the national guard to do crowd control.\n",
+      "Every Brazil x Argentina match ends like this, no matter what is the hosting country, always been like this for the last 50 years, they just can&#39;t have a single peaceful match\n",
       "that&#39;s why mexicans hate Argentinans so much😂\n",
       "Argentina &quot;took care&quot; of you\n",
       "thats what you get for racism\n",
@@ -159,22 +165,12 @@
    ],
    "source": [
     "for item in response['items']:\n",
-    "  print(item['snippet']['topLevelComment']['snippet']['textDisplay'])\n",
     "  comments.append(item['snippet']['topLevelComment']['snippet']['textDisplay'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -213,85 +209,79 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>that&amp;#39;s why mexicans hate Argentinans so much😂</td>\n",
+       "      <td>whos fault</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Argentina &amp;quot;took care&amp;quot; of you</td>\n",
+       "      <td>&amp;lt;Hit 100k today. Thanks for the knowledge a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>thats what you get for racism</td>\n",
+       "      <td>The people that organized this would also thin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>I&amp;#39;m really disappointed with Brazil&amp;#39;s ...</td>\n",
+       "      <td>These are two national teams that should have ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Every Brazil x Argentina match ends like this,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>that&amp;#39;s why mexicans hate Argentinans so much😂</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Argentina &amp;quot;took care&amp;quot; of you</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>thats what you get for racism</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>I&amp;#39;m really disappointed with Brazil&amp;#39;s ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>POLICE ARE HATING THE WINNERS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>Give football it&amp;#39;s dignity. Thats not the ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>People just can’t behave in public anywhere.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>Peaceful fans spread peace</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>Shame on Brazilian police</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>Why is it when police show up things escalate?...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>95 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    0\n",
-       "0   that&#39;s why mexicans hate Argentinans so much😂\n",
-       "1              Argentina &quot;took care&quot; of you\n",
-       "2                       thats what you get for racism\n",
-       "3   I&#39;m really disappointed with Brazil&#39;s ...\n",
-       "4                       POLICE ARE HATING THE WINNERS\n",
-       "..                                                ...\n",
-       "90  Give football it&#39;s dignity. Thats not the ...\n",
-       "91       People just can’t behave in public anywhere.\n",
-       "92                         Peaceful fans spread peace\n",
-       "93                          Shame on Brazilian police\n",
-       "94  Why is it when police show up things escalate?...\n",
-       "\n",
-       "[95 rows x 1 columns]"
+       "                                                   0\n",
+       "0                                         whos fault\n",
+       "1  &lt;Hit 100k today. Thanks for the knowledge a...\n",
+       "2  The people that organized this would also thin...\n",
+       "3  These are two national teams that should have ...\n",
+       "4  Every Brazil x Argentina match ends like this,...\n",
+       "5  that&#39;s why mexicans hate Argentinans so much😂\n",
+       "6             Argentina &quot;took care&quot; of you\n",
+       "7                      thats what you get for racism\n",
+       "8  I&#39;m really disappointed with Brazil&#39;s ...\n",
+       "9                      POLICE ARE HATING THE WINNERS"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('yt_comments.csv', index=False )"
+   ]
   }
  ],
  "metadata": {
