--- a/web_scraping/youtube/dataScrapeFromYoutube.ipynb
+++ b/web_scraping/youtube/dataScrapeFromYoutube.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,20 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "videoID = \"COHjJEENyPQ\"\n",
+    "with open(r\"videos_used.txt\", \"a\") as file:\n",
+    "    file.write(videoID + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "request = youtube.commentThreads().list(\n",
     "    part = \"snippet\",\n",
-    "    videoId=\"SSivch5zTH4\",\n",
+    "    videoId= videoID,\n",
     "    maxResults = 100\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,116 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "whos fault\n",
-      "&lt;Hit 100k today. Thanks for the knowledge and nuggets you had thrown my way over last months, started with $8k in February\n",
-      "The people that organized this would also think it&#39;s a good idea allow palestinian fans be next to israel fans, or russian alongside ukranians. <br><br>What in the world were they thinking.\n",
-      "These are two national teams that should have more security measures. In the pasts, they have instances of violence resulting in injuries or even death. Most of these who paid the price we’re Argentinian fans and players. FIFA should know better when having fixtures involving rival national teams. If they play another match together, you might as well get the SWAT or even the national guard to do crowd control.\n",
-      "Every Brazil x Argentina match ends like this, no matter what is the hosting country, always been like this for the last 50 years, they just can&#39;t have a single peaceful match\n",
-      "that&#39;s why mexicans hate Argentinans so much😂\n",
-      "Argentina &quot;took care&quot; of you\n",
-      "thats what you get for racism\n",
-      "I&#39;m really disappointed with Brazil&#39;s police.\n",
-      "POLICE ARE HATING THE WINNERS\n",
-      "Batak sial dorang ni 😂\n",
-      "Argentinos são baderneiros e racistas, por isso apanharam. Eles precisam aprender a respeitar as pessoas, principalmente quando estão num país que não é o deles.\n",
-      "🤣LOL\n",
-      "Showing bad behavior to Argentina is very rude for Brazil. I didn&#39;t think that Brazil, who love to support the world of football, would do this? Messi seems to respect and love his fans very much. Argentinians who are united. I saw Messi&#39;s fans being beaten. I feel very sorry for the Argentines. 😢❤\n",
-      "People might have to conceal their emotions when sitting with rival fans.\n",
-      "Common thing in Brazil\n",
-      "Those police are thirsty for blood. Kind of psychotic actually.\n",
-      "Imagine three seconds later you hear gunshots💀\n",
-      "Brazil did this on purpose. Argentinian fans were surrounded by Brazilian. So the blame fall Brazil.\n",
-      "Argentinians are ALWAYS the problem...if you don&#39;t believe me, look at the Final game of Libertadores in 2018, between Boca and River Plate, both Argentinian teams. The violence got so out of hand, that they had to transfer the final game all the way to Spain, so Argentinian hooligans could not afford to travel there.<br>And every time the Argentinians comes to Brazil, their fans are always into street provocations, stupid chants,  and of course, starting fights for no reason whatsoever.  And on the top of that they behave like at home, where they have no respect for the police, and no following the rules.<br>So, they could do us a favor, and never set foot again in our country, since all they bring is trouble. No wonder their country in an eternal economic crisis for the last 50 years. It&#39;s a bunch of hooligans running it.\n",
-      "Don&#39;t generalize Brazil, just the police, the whole of Brazil is not to blame for this attitude, don&#39;t generalize Brazil.\n",
-      "the level of uncivilized poor countries\n",
-      "🚀❤️✨⛽🔥\n",
-      "Sometimes its undercovers  who start riots just for innocent people to end up killed.\n",
-      "I wish for Argentina to go play in Mexico and act like this boyyyyyyy that would be a dream come true since they are the most racist country  in Latin America and they think they are so tuff wen in reality they ain&#39;t plz come play in Mexico  see how tough y&#39;all really are  plzzzzz\n",
-      "Why\n",
-      "I am Brazilian I saw the entire moment..\n",
-      "NBC NEWS don&#39;t lie with your subtitles it was the BRAZILIAN POLICE that started it all.\n",
-      "&quot;Brasil isn&#39;t for beginners&quot;!  Go Brasil!\n",
-      "Anyone notice the coked out police officer ?\n",
-      "Why aren&#39;t we talking about the racist terms commonly used by Argentines against Brazilians and it even ended up in social media trend topics?<br>​\n",
-      "NBC FAKE NEWS <br>TRUMP 2024 ✝️\n",
-      "USA can&#39;t afford to host any matches\n",
-      "La.policia brasilera es brutal. Les han pegado a todos los hinchas y equipos sudamericanos que juegan de vsitante. Leo a los moralistas que dicen no saben comportarse, no entienden nada..\n",
-      "Brazil was looking for a conflict to either suspend the game and playing on so other time when their national team stop sucking or forcing FIFA to punish Argentina  with some point deductions.  The organizers know they should not put those fan together but they did it anyway.\n",
-      "If this is what they do on camera, imagine what they do in the shadows. ACAB\n",
-      "Argentinian are racists\n",
-      "What World Cup it’s every 4 yers\n",
-      "Awesome\n",
-      "Brazilian fans/police are always an issue no matter who they play or where they do. They’re an issue that needs to be addressed\n",
-      "Same government, same police state= criminals\n",
-      "The brazilian police set this up every single time an Argentinian team goes to Brasil with no consequence to them . There were women in children in the stands.\n",
-      "🇧🇷🇧🇷🇧🇷🇧🇷\n",
-      "ACAB\n",
-      "I have no respect for <a href=\"http://www.youtube.com/results?search_query=%23brazilians\">#Brazilians</a> specially the <a href=\"http://www.youtube.com/results?search_query=%23soccerteam\">#soccerteam</a> all they do is worry about their stupid dance moves 😡😡\n",
-      "As expected, Brazil is an uncivilized country.\n",
-      "Shame on brazil\n",
-      "Asia\n",
-      "Indonesian\n",
-      "Fifa\n",
-      "Indonesia stadion Kanjuruhan Malang\n",
-      "Full paisa wasool 😅😅\n",
-      "Wkwkwkwkwkw\n",
-      "🤬🤬🤬🤬🤬🤬\n",
-      "Argetntine fans don’t know how to act. They are classless, arrogant, and violent. They went into someone’s backyard and started the fight, what did they expect would happen?\n",
-      "The Brazilian police are the most embarrassing police force in the world, they don&#39;t know manners and ethics.<br><br>Less professional😢😢😢\n",
-      "Se vierem fazer baderna vao tomar mesmo, bando de arruaceiros.\n",
-      "Brazilians and Argentines have hated each other for decades, I don&#39;t know why they still come together, if the rivalry between the two countries is public knowledge. This rivalry, not only in football, but in other areas such as politics\n",
-      "Is this Israel-Palestine?\n",
-      "What did they expect was going to happen when two arch rivals would be allowed in the same block and not in separate blocks like usually.\n",
-      "Fifa need to take action on the organisers and the security should be suspended\n",
-      "Shame on Brazil security.... Only targeted argentina...\n",
-      ".?\n",
-      "This is an embarrassment for Brazil\n",
-      "The people of Brasil need to be sent back to Africa they are a joke of a country.\n",
-      "The cops were beating the crap out of everyone in their path.\n",
-      "Brazil is a fourth world country\n",
-      "Argentina has the most unruly fans. I bet you they were to blame.\n",
-      "imagine the poor people trapped because of the actions of dumb fans\n",
-      "achei pouco pra país racista 🤭\n",
-      "Que vergüenza de policías.\n",
-      "No entiendo como los pusieron juntos... <br><br>Eso no se hace! Están 10 a 1 y para colmo después la policía les pega...<br><br>Y si fuera al revés? O si les hacemos lo mismo cuando vengan de visitantes? No es la solución, pero molesta la falta de empatia brasilera.\n",
-      "THE UNEXPECTED HAPPENED\n",
-      "That’s why they should separate rival fans.\n",
-      "Eso es algo normal de las dos hinchadas querido norteamérica 🇺🇸 haci son los juegos de fútbol en sudamerica 🌎 y seguimos siendo los campeones 🇦🇷\n",
-      "Seems to me that the police were only beating the Argentinian fans\n",
-      "What !<br>No red cards ? 🟥\n",
-      "Shame on Brazil. Proud of Argentina.\n",
-      "Ban brazil for 5year..\n",
-      "⭐️⭐️⭐️⭐️⭐️\n",
-      "🇧🇷🤝🏻🇦🇷♥️\n",
-      "Why this happened?\n",
-      "Argentine fans call Brazil fans monkeys. Brazil fans booed the Argentina national anthem. Fight broke out.\n",
-      "Faltou gás larcrimogênio e balas de borracha 😎👍\n",
-      "Braz &amp; Arg &gt;&gt; Europe\n",
-      "Police 😡\n",
-      "And you thought Eagles &amp; Dodgers games were bad.\n",
-      "&quot;HEALTHY COMPETITION* is a lie and a <b>STUPID HUMAN TRICK</b> to train you fools/fans for wars, from early childhood. And the masses are clueless, brainwashed into US and THEM. Our colors/flag vs theirs. Divide and <del>Conquer</del> control. Wake up! fans..\n",
-      "Wait did Brazil get disqualified?\n",
-      "Maybe try to behave with class and you won&#39;t get beaten by the police?\n",
-      "The Argentinian fans were going after the brazilian players family members\n",
-      "Brazil military police is wild. Don&#39;t even stare at them<br>There were people crippled for life after Brazil world cup.\n",
-      "This makes our stadium brawls at NFL games here in the U.S. look chickensh*t.\n",
-      "A complete set up for the communist police to just bash people. This is what socialism looks like\n",
-      "Police shame 😮\n",
-      "Give football it&#39;s dignity. Thats not the spirit of football.. In foot ball people come to have fun not to fight.\n",
-      "People just can’t behave in public anywhere.\n",
-      "Peaceful fans spread peace\n",
-      "Shame on Brazilian police\n",
-      "Why is it when police show up things escalate? Violence Gets worse!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for item in response['items']:\n",
     "  comments.append(item['snippet']['topLevelComment']['snippet']['textDisplay'])"
@@ -170,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -209,43 +113,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>whos fault</td>\n",
+       "      <td>2026 is on the goat will beat his age ,HE IS C...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>&amp;lt;Hit 100k today. Thanks for the knowledge a...</td>\n",
+       "      <td>Very sad 😢</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>The people that organized this would also thin...</td>\n",
+       "      <td>⛈️</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>These are two national teams that should have ...</td>\n",
+       "      <td>Wait for 2026 CR7 will be there</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Every Brazil x Argentina match ends like this,...</td>\n",
+       "      <td>Santos should have started with ronaldo how on...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>that&amp;#39;s why mexicans hate Argentinans so much😂</td>\n",
+       "      <td>&lt;a href=\"https://www.youtube.com/watch?v=COHjJ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Argentina &amp;quot;took care&amp;quot; of you</td>\n",
+       "      <td>The substitution that scared no one</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>thats what you get for racism</td>\n",
+       "      <td>Cristiano dice q no cambiaría sus 5 Champions ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>I&amp;#39;m really disappointed with Brazil&amp;#39;s ...</td>\n",
+       "      <td>Portugal deserved this loss, so many good chan...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>POLICE ARE HATING THE WINNERS</td>\n",
+       "      <td>I remember pepe and bruno cried something abou...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -253,19 +157,19 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0                                         whos fault\n",
-       "1  &lt;Hit 100k today. Thanks for the knowledge a...\n",
-       "2  The people that organized this would also thin...\n",
-       "3  These are two national teams that should have ...\n",
-       "4  Every Brazil x Argentina match ends like this,...\n",
-       "5  that&#39;s why mexicans hate Argentinans so much😂\n",
-       "6             Argentina &quot;took care&quot; of you\n",
-       "7                      thats what you get for racism\n",
-       "8  I&#39;m really disappointed with Brazil&#39;s ...\n",
-       "9                      POLICE ARE HATING THE WINNERS"
+       "0  2026 is on the goat will beat his age ,HE IS C...\n",
+       "1                                         Very sad 😢\n",
+       "2                                                 ⛈️\n",
+       "3                    Wait for 2026 CR7 will be there\n",
+       "4  Santos should have started with ronaldo how on...\n",
+       "5  <a href=\"https://www.youtube.com/watch?v=COHjJ...\n",
+       "6                The substitution that scared no one\n",
+       "7  Cristiano dice q no cambiaría sus 5 Champions ...\n",
+       "8  Portugal deserved this loss, so many good chan...\n",
+       "9  I remember pepe and bruno cried something abou..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,11 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('yt_comments.csv', index=False )"
+    "df.to_csv('yt_comments.csv', index=False, mode=\"a\")"
    ]
   }
  ],
