New Data scraping the cleaning

--- a/data_cleaning/youtube/yt_cleaning.ipynb
+++ b/data_cleaning/youtube/yt_cleaning.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Preperation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Import Modules to Clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,33 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"C:\\VSCode\\NLP4B_Football\\web_scraping\\youtube\\yt_comments.csv\", \"r\") as f:\n",
-    "    df = pd.read_csv(f)\n"
+    "with open(r\"C:\\Users\\janba\\OneDrive\\Dokumente\\Privates\\Studium\\Master\\NLP4B_Football\\web_scraping\\youtube\\yt_comments_new.csv\", \"r\") as f:\n",
+    "    df = pd.read_csv(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1770, 1)\n",
-      "👍\n"
+      "(1998, 4)\n"
      ]
     }
    ],
    "source": [
-    "print(df.shape)\n",
-    "#print(df.head())\n",
-    "\n",
-    "print(df.iloc[1, 0])\n"
+    "print(df.shape)"
    ]
   },
   {
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -91,43 +94,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>comments</th>\n",
+       "      <th>source</th>\n",
+       "      <th>label</th>\n",
+       "      <th>type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Go on Lukaku Reppin for The SlapHeads 🤣</td>\n",
+       "      <td>Bale&amp;#39;s Last Game 💔</td>\n",
+       "      <td>youtube</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>international</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>👍</td>\n",
+       "      <td>Rashford who needs ronaldo</td>\n",
+       "      <td>youtube</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>international</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Belgium like England, win the easy games then ...</td>\n",
+       "      <td>Smooth goal by Rashford</td>\n",
+       "      <td>youtube</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>international</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>so Lukaku and Mbappe are the cookers of the eu...</td>\n",
+       "      <td>🇬🇧 😅</td>\n",
+       "      <td>youtube</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>international</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Considering Belgium history I&amp;#39;m surprised ...</td>\n",
+       "      <td>England siptted on Wales than on USA..</td>\n",
+       "      <td>youtube</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>international</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            comments\n",
-       "0            Go on Lukaku Reppin for The SlapHeads 🤣\n",
-       "1                                                  👍\n",
-       "2  Belgium like England, win the easy games then ...\n",
-       "3  so Lukaku and Mbappe are the cookers of the eu...\n",
-       "4  Considering Belgium history I&#39;m surprised ..."
+       "                                 comments   source  label           type\n",
+       "0                  Bale&#39;s Last Game 💔  youtube    NaN  international\n",
+       "1              Rashford who needs ronaldo  youtube    NaN  international\n",
+       "2                 Smooth goal by Rashford  youtube    NaN  international\n",
+       "3                                    🇬🇧 😅  youtube    NaN  international\n",
+       "4  England siptted on Wales than on USA..  youtube    NaN  international"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,30 +159,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Actual Cleaning:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correcting the formats:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"comments\"] = df[\"comments\"].str.replace(',', \"\")\n",
+    "df[\"comments\"] = df[\"comments\"].str.replace('<br><br>', \"\")\n",
+    "df[\"comments\"] = df[\"comments\"].str.replace('&#39;', \"'\")\n",
+    "df[\"comments\"] = df[\"comments\"].str.replace('’', \"'\")\n",
+    "df[\"comments\"] = df[\"comments\"].str.replace('&quot;', '\"')\n",
+    "df[\"comments\"] = df[\"comments\"].str.replace('&amp;', '&')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure that only comments stay, that have at least one latin character, so we delete completely other languages. (e.g. chinese or arabic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latin_letters_mask = df['comments'].str.contains('[a-zA-Z]')\n",
+    "df = df[latin_letters_mask]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Promt Test:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1770, 3)"
+       "(1892, 4)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"comments\"] = df[\"comments\"].str.replace(',', \"\")\n",
-    "df[\"comments\"] = df[\"comments\"].str.replace('<br><br>', \"\")\n",
-    "df[\"comments\"] = df[\"comments\"].str.replace('&#39;', \"'\")\n",
-    "df[\"comments\"] = df[\"comments\"].str.replace('&quot;', '\"')\n",
-    "df[\"source\"] = \"youtube\"\n",
-    "df[\"label\"] = \"\"\n",
     "df.head()\n",
-    "df.iloc[41, 1]\n",
     "df.shape"
    ]
   },
@@ -169,28 +235,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Further precleaning"
+    "Deleting comments with Links (href)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1711, 3)\n"
+      "(1773, 4)\n"
      ]
     }
    ],
    "source": [
-    "# links (href) entfernen\n",
     "df = df[~df[\"comments\"].str.contains(\"href\")]\n",
-    "df.sample(10)\n",
-    "print(df.shape)\n",
-    "#"
+    "\n",
+    "# test how many data got deleted\n",
+    "print(df.shape)"
    ]
   },
   {
@@ -202,14 +267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter('youtube_cleaned_for_label.xlsx', engine='xlsxwriter', mode='w') as writer:\n",
-    "    df.to_excel(writer, index=False)\n",
-    "    #drop index column\n",
-    "    \n"
+    "with pd.ExcelWriter('youtube_cleaned_for_label_NEW.xlsx', engine='xlsxwriter') as writer:\n",
+    "    df.to_excel(writer, index=False)"
    ]
   }
  ],
