--- a/web_scraping/youtube/dataScrapeFromYoutube.ipynb
+++ b/web_scraping/youtube/dataScrapeFromYoutube.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
-    "videoID = \"COHjJEENyPQ\"\n",
+    "videoID = \"sGmDkh9muzw\"\n",
+    "\n",
+    "\n",
     "with open(r\"videos_used.txt\", \"a\") as file:\n",
     "    file.write(videoID + \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -113,43 +115,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2026 is on the goat will beat his age ,HE IS C...</td>\n",
+       "      <td>Maddison plays like the Kyrie Irving of football</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Very sad 😢</td>\n",
+       "      <td>Why put spoilers in the title?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>⛈️</td>\n",
+       "      <td>You feel it? That&amp;#39;s how you played with 9 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Wait for 2026 CR7 will be there</td>\n",
+       "      <td>Last goal tho 🥵🥵🥵</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Santos should have started with ronaldo how on...</td>\n",
+       "      <td>If Eric Dier and Hugo Lloris were the biggest ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>&lt;a href=\"https://www.youtube.com/watch?v=COHjJ...</td>\n",
+       "      <td>Son seems to be cr7 😮</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>The substitution that scared no one</td>\n",
+       "      <td>90 percent of our goals are team work and idio...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Cristiano dice q no cambiaría sus 5 Champions ...</td>\n",
+       "      <td>Johnson,Madison and son goall</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Portugal deserved this loss, so many good chan...</td>\n",
+       "      <td>&lt;a href=\"https://www.youtube.com/watch?v=sGmDk...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>I remember pepe and bruno cried something abou...</td>\n",
+       "      <td>Tottenham must get rid of Richarlison just lik...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -157,19 +159,19 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0  2026 is on the goat will beat his age ,HE IS C...\n",
-       "1                                         Very sad 😢\n",
-       "2                                                 ⛈️\n",
-       "3                    Wait for 2026 CR7 will be there\n",
-       "4  Santos should have started with ronaldo how on...\n",
-       "5  <a href=\"https://www.youtube.com/watch?v=COHjJ...\n",
-       "6                The substitution that scared no one\n",
-       "7  Cristiano dice q no cambiaría sus 5 Champions ...\n",
-       "8  Portugal deserved this loss, so many good chan...\n",
-       "9  I remember pepe and bruno cried something abou..."
+       "0   Maddison plays like the Kyrie Irving of football\n",
+       "1                     Why put spoilers in the title?\n",
+       "2  You feel it? That&#39;s how you played with 9 ...\n",
+       "3                                  Last goal tho 🥵🥵🥵\n",
+       "4  If Eric Dier and Hugo Lloris were the biggest ...\n",
+       "5                              Son seems to be cr7 😮\n",
+       "6  90 percent of our goals are team work and idio...\n",
+       "7                      Johnson,Madison and son goall\n",
+       "8  <a href=\"https://www.youtube.com/watch?v=sGmDk...\n",
+       "9  Tottenham must get rid of Richarlison just lik..."
       ]
      },
-     "execution_count": 160,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,11 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('yt_comments.csv', index=False, mode=\"a\")"
+    "df['source'] = 'youtube'\n",
+    "df['label'] = ''\n",
+    "df['type'] = 'league'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('yt_comments_new.csv', index=False, mode=\"a\")"
    ]
   }
  ],
